NXP-7272: make it possible to hide the title or the settings / toggle buttons when using the lightweight OpenSocial container

--- a/nuxeo-opensocial-container/src/main/resources/web/nuxeo.war/css/opensocial/light-container-gadgets.css
+++ b/nuxeo-opensocial-container/src/main/resources/web/nuxeo.war/css/opensocial/light-container-gadgets.css
@@ -16,11 +16,15 @@
  * specific language governing permissions and limitations
  * under the License.
  */
- 
+
 .gadgets-gadget-chrome {
   float: left;
   margin: 4px;
   border: 1px solid #ddd;
+}
+
+.no-border {
+  border-color: transparent;
 }
 
 .gadgets-gadget {
@@ -59,3 +63,4 @@ div.gadgets-gadget-content {
 
 .gadgets-log-entry {
 }
+
