NXP-6328 - follow finestly the effective server starting status

--- a/nuxeo-distribution-resources/src/main/resources/templates-jboss/common/META-INF/templates/web.xml
+++ b/nuxeo-distribution-resources/src/main/resources/templates-jboss/common/META-INF/templates/web.xml
@@ -21,7 +21,7 @@
   %{FILTER-MAPPING}%
 
   %{CONTEXT-PARAM}%
-  
+
   %{CONTEXT-PARAM-RICHFACES}%
 
   %{LOGIN-CONFIG}%
@@ -35,6 +35,8 @@
   %{ERROR-PAGE}%
 
   %{SECURITY-CONSTRAINT}%
+
+  %{LAST-SERVLET}%
 
   <security-role>
     <description>The role required to access restricted content</description>
