NXP-6328 - follow finestly the effective server starting status

--- a/nuxeo-distribution-resources/src/main/resources/templates-tomcat-coreserver/common/META-INF/templates/web.xml
+++ b/nuxeo-distribution-resources/src/main/resources/templates-tomcat-coreserver/common/META-INF/templates/web.xml
@@ -33,6 +33,8 @@
 
   %{SECURITY-CONSTRAINT}%
 
+  %{LAST-SERVLET}%
+
   <security-role>
     <description>The role required to access restricted content</description>
     <role-name>admin</role-name>
