NXP-5291 - make session-timeout configurable

--- a/nuxeo-distribution-resources/src/main/resources/templates-jboss/common/META-INF/templates/web.xml
+++ b/nuxeo-distribution-resources/src/main/resources/templates-jboss/common/META-INF/templates/web.xml
@@ -49,7 +49,7 @@
   </security-role>
 
   <session-config>
-    <session-timeout>60</session-timeout>
+    <session-timeout>${session.timeout}</session-timeout>
   </session-config>
 
 </web-app>
