--- a/nuxeo-distribution-resources/src/main/resources/templates-tomcat-coreserver/common/META-INF/templates/web.xml
+++ b/nuxeo-distribution-resources/src/main/resources/templates-tomcat-coreserver/common/META-INF/templates/web.xml
@@ -46,7 +46,7 @@
   </security-role>
 
   <session-config>
-    <session-timeout>60</session-timeout>
+    <session-timeout>${session.timeout}</session-timeout>
   </session-config>
 
 </web-app>
