--- a/nuxeo-opensocial-container/src/main/resources/web/nuxeo.war/css/opensocial/light-container-gadgets.css
+++ b/nuxeo-opensocial-container/src/main/resources/web/nuxeo.war/css/opensocial/light-container-gadgets.css
@@ -23,6 +23,10 @@
   border: 1px solid #ddd;
 }
 
+#usersPanel .gadgets-gadget-chrome, #usersPanel div.gadgets-gadget-chrome {
+  float: none;
+}
+
 .no-border {
   border-color: transparent;
 }
