NXP-7423: fix floating issue on Profile view

--- a/nuxeo-opensocial-container/src/main/resources/web/nuxeo.war/css/opensocial/light-container-gadgets.css
+++ b/nuxeo-opensocial-container/src/main/resources/web/nuxeo.war/css/opensocial/light-container-gadgets.css
@@ -27,6 +27,10 @@
   float: none;
 }
 
+#viewUser .gadgets-gadget-chrome, #viewUser div.gadgets-gadget-chrome {
+  float: none;
+}
+
 .no-border {
   border-color: transparent;
 }
