--- a/nuxeo-webengine-gadgets/src/main/resources/skin/resources/css/gadget-common.css
+++ b/nuxeo-webengine-gadgets/src/main/resources/skin/resources/css/gadget-common.css
@@ -20,18 +20,22 @@ a:hover {
   text-decoration: underline;
 }
 
+img {
+	border: none;
+}
+
 button {
   line-height: 100%;
   cursor: pointer;
   color: #333;
   text-align: center;
   text-decoration: none;
-  padding: .5em 2em .55em;
+  padding: 0.1em 0.5em 0.2em;
   margin:.5em 1em .5em 0;
   text-shadow: 0 1px 1px rgba(0,0,0,.3);
-  -webkit-border-radius: .5em;
-  -moz-border-radius: .5em;
-  border-radius: .5em;
+  -webkit-border-radius: .3em;
+  -moz-border-radius: .3em;
+  border-radius: .3em;
   -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2);
   -moz-box-shadow: 0 1px 2px rgba(0,0,0,.2);
   box-shadow: 0 1px 2px rgba(0,0,0,.2);
