NXCM-458 replace content tab by route tab

--- a/nuxeo-platform-document-routing-web/src/main/resources/web/nuxeo.war/layouts/layout_route_listing_template.xhtml
+++ b/nuxeo-platform-document-routing-web/src/main/resources/web/nuxeo.war/layouts/layout_route_listing_template.xhtml
@@ -48,6 +48,8 @@
       </div>
     </nxu:set>
 
+   <h:outputText value="#{messages['label.lifecycle']}: #{currentDocument.currentLifeCycleState}" />
+
 		<thead>
 			<tr>
 				<nxl:layoutColumn>
