--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/nuxeo_dm_default.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/nuxeo_dm_default.css
@@ -68,7 +68,7 @@ h3 { font-size: 1.2em; padding: .8em 0 .3em }
 h4, h5, h6 { color: "title.minor (__FLAVOUR__ color)";font-size: .8em; margin: .2em 0 .2em 0 }
 
 /*-- =Forms elements */
-textarea { padding: 5px }
+textarea { padding: 5px; font-size: .95em; }
 .selectDocumentType { margin-top: 10px }
 .checkBox { margin-right: 3px }
 .required { background: transparent url("${basePath}/icons/required.gif") top right no-repeat; padding: 0 10px 0 0 }
@@ -94,9 +94,10 @@ textarea { padding: 5px }
 
 input.button[disabled=disabled], input.button[disabled=disabled]:hover {
 	background: none "neutral.lighter (__FLAVOUR__ background)";
-	border: 1px solid; border-color: "gray (__FLAVOUR__ border)";
+	border: 1px solid; border-color: "button.disabled (__FLAVOUR__ border)";
 	color: "link.disabled (__FLAVOUR__ color)";
-	cursor: default }
+	cursor: default;
+	visibility: hidden }
 
 .majorButton, input.majorButton {
 	background: none repeat scroll 0 0 #0080B0;
@@ -121,7 +122,7 @@ input.button[disabled=disabled], input.button[disabled=disabled]:hover {
 /*---- =Header----*/
 .header {
   background-color: "header (__FLAVOUR__ background)";
-  border-bottom: 2px solid; border-bottom-color: "noborder (__FLAVOUR__ border)";
+  border-bottom: 2px solid; border-color: "noborder (__FLAVOUR__ border)";
 	height:36px;
 	overflow: auto;
 	width:100% }
@@ -187,7 +188,7 @@ input.button[disabled=disabled], input.button[disabled=disabled]:hover {
 /*---- =Tabs ----*/
 .tabsBar {
   border-bottom:1px solid;
-  border-bottom-color: "light (__FLAVOUR__ border)";
+  border-color: "light (__FLAVOUR__ border)";
   float:left;
   margin-top:5px;
   width:100% }
@@ -224,15 +225,14 @@ input.button[disabled=disabled], input.button[disabled=disabled]:hover {
 
 /*---- =Main Area ----*/
 .mainContainer { height: 600px; width: 100%; font-size: .8em }
-.mainContainer .column { border-right: 1px solid; border-right-color: "lighter (__FLAVOUR__ border)"; font-size: .85em; padding: 5px; width: 18% }
+.mainContainer .column { border-right: 1px solid; border-color: "lighter (__FLAVOUR__ border)"; font-size: .85em; padding: 5px; width: 18% }
 .mainContainer .content {
   background: url("${basePath}/img/theme_galaxy/galaxy_logo.png") no-repeat scroll right bottom #fff;
-  border-left: 1px solid; border-left-color: "noborder (__FLAVOUR__ border)";
   padding: 0;
-  width: 82% }
+  width: 82%; }
 
 /*-- =TabsContent */
-.tabsContent { font-size: .98em; margin: 0; padding: 5px 10px 10px 10px }
+.tabsContent { font-size: .95em; margin: 0; padding: 5px 10px 10px 10px }
 
 /*-- =Action Bar */
 .action_bar { float: left; line-height: normal; margin: 10px 10px 10px 0 }
@@ -241,7 +241,7 @@ input.button[disabled=disabled], input.button[disabled=disabled]:hover {
 .action_bar ul { list-style: none; margin: 0; padding: 0 10px 0 0 }
 .action_bar li { float: left; margin: 0; padding: 0 }
 .action_bar a {
-  box-shadow:inset 0px 1px 0px 0px #fff;
+  box-shadow:0px 1px 0px 0px #fff inset;
   background-color:"neutral.medium (__FLAVOUR__ background)";
   border-radius:3px;
   border:1px solid; border-color: "light (__FLAVOUR__ border)";
@@ -364,7 +364,7 @@ table thead th { padding: 3px; text-align: left }
   padding: 5px 3px }
 .dataList thead th {
   background-color: "neutral.lighter (__FLAVOUR__ background)";
-  border-bottom: 1px solid; border-bottom-color: "light (__FLAVOUR__ border)";
+  border-bottom: 1px solid; border-color: "light (__FLAVOUR__ border)";
   color: "gray.dark (__FLAVOUR__ color)";
   padding: 5px 3px;
   text-align: left }
@@ -387,7 +387,7 @@ table thead th { padding: 3px; text-align: left }
   margin-bottom: 5px }
 table.dataOutput thead th {
   background-color: "neutral.lighter (__FLAVOUR__ background)";
-  border-bottom: 1px solid; border-bottom-color: "light (__FLAVOUR__ border)";
+  border-bottom: 1px solid; border-color: "light (__FLAVOUR__ border)";
   color: "gray.dark (__FLAVOUR__ color)";
   padding: 5px 3px;
   text-align: left }
@@ -445,7 +445,7 @@ table.trashTable tbody tr:hover { background-color: "info (__FLAVOUR__ backgroun
 .dataRowOdd:hover, .dataRowEven:hover {	background-color: "color.major.light (__FLAVOUR__ background)"; }
 
 /*-- =Foldable Boxes */
-.foldableBox { border-bottom: 1px solid; border-bottom-color:"lighter (__FLAVOUR__ border)"; font-size: .9em; margin-bottom: 20px }
+.foldableBox { border-bottom: 1px solid; border-color:"lighter (__FLAVOUR__ border)"; font-size: .9em; margin-bottom: 20px }
 
 .foldableBox h3 {
   background-color: #fff;
@@ -491,7 +491,7 @@ table.trashTable tbody tr:hover { background-color: "info (__FLAVOUR__ backgroun
 .foldableLightBox div.folded a, .foldableLightBox div.unfolded a { color: "gray.dark (__FLAVOUR__ color)"; float: left }
 .foldableLightBox div.folded, .foldableLightBox div.unfolded {
   border-bottom: 1px solid;
-  border-bottom-color: "lighter (__FLAVOUR__ border)";
+  border-color: "lighter (__FLAVOUR__ border)";
   color: "gray.dark (__FLAVOUR__ color)";
   font-size: .8em;
   height: 18px;
@@ -507,7 +507,7 @@ table.trashTable tbody tr:hover { background-color: "info (__FLAVOUR__ backgroun
 .massEditForm foldableBox { margin-right: 15px }
 
 /*-- =Tips and Messages */
-.facesStatusMessage { bottom: 0; left: 0; position: absolute; z-index: 1000 }
+.facesStatusMessage { bottom: 0; left: 0; position: fixed; z-index: 1000 }
 .facesStatusMessage ul, .infoFeedback ul, .warningFeedback ul, .errorFeedback ul { list-style-type: none; width: 500px }
 
 .errorMessage, .infoMessage, .warningMessage, .infoFeedback  {
@@ -575,13 +575,14 @@ div.syndicationButton div.syndicationLinks a { color: #fff }
 
 .genericPopUp .closePopUpHeader {
   background-color: "color.major.light (__FLAVOUR__ background)";
-  border-bottom: 1px solid;  border-bottom-color: "light (__FLAVOUR__ border)";
+  border-bottom: 1px solid;  border-color: "light (__FLAVOUR__ border)";
   padding: 3px;
   text-align: right }
 
 .genericPopUp .closePopUpHeader .closePopUp { cursor: pointer; float: right }
 .genericPopUp .closePopUpHeader .popUpTitle { float: left; font-size: 1.2em }
 .genericPopUp .popUpContent { height: 390px; overflow: auto; padding: 10px }
+.genericPopUp .dr-tree td, .genericPopUp .rich-tree td { padding: 1px }
 
 .bigPopUp { height: 70%; width: 80% }
 
@@ -629,7 +630,7 @@ a.linkedin:hover { background-position:-16px bottom }
 .directoryBack { background: url("${basePath}/icons/arrow_left.gif") no-repeat scroll 3px 1px transparent; padding: 2px 2px 2px 20px }
 
 /*----  =Navigation controls ----*/
-#pageNavigationControls { border-bottom: 1px solid; border-bottom-color: "lighter (__FLAVOUR__ border)"; margin: 0 0 5px; padding: 2px 0 0; text-align: center }
+#pageNavigationControls { border-bottom: 1px solid; border-color: "lighter (__FLAVOUR__ border)"; margin: 0 0 5px; padding: 2px 0 0; text-align: center }
 #pageNavigationControls span { color: "gray.dark (__FLAVOUR__ color)"; font-weight: bold; margin: 10px 5px; vertical-align: top }
 #pageNavigationControls input { margin-left: 5px }
 
@@ -642,7 +643,7 @@ a.linkedin:hover { background-position:-16px bottom }
 .documentManagement {}
 
 /*-- =Breadcrumb */
-.breadcrumb { background: none repeat scroll 0 0 "neutral.light (__FLAVOUR__ background)"; border-bottom: 1px solid; border-bottom-color: "lighter (__FLAVOUR__ border)"; font-size: .7em; padding: 3px 7px }
+.breadcrumb { background-color: "neutral.lighter (__FLAVOUR__ background)"; border-bottom: 1px solid; border-color: "lighter (__FLAVOUR__ border)"; font-size: .7em; padding: 3px 7px }
 .breadcrumb .action_bar { margin: 0 }
 .breadcrumb .action_bar a { border: none; padding: 3px 0 }
 
@@ -651,7 +652,7 @@ a.linkedin:hover { background-position:-16px bottom }
 .breadcrumbs a:hover, .breadcrumbs a:active { font-weight: normal; text-decoration: underline }
 
 .printButton { float: right; padding-right: 1px }
-.printButton .liveEditCreateButtons { border-right: 1px solid;  border-right-color: "light (__FLAVOUR__ border)"; margin-right: 5px; padding-right: 8px }
+.printButton .liveEditCreateButtons { border-right: 1px solid;  border-color: "light (__FLAVOUR__ border)"; margin-right: 5px; padding-right: 8px }
 
 /*--  =Document view */
 .currentDocumentDescription { font-size: .8em; padding: 4px 0 }
@@ -688,7 +689,7 @@ td.dr-tree-h-text, td.dr-tree-h-text span, td.dr-tree-h-text a.treeLink { white-
 
 #clipboardCopy { padding: 3px }
 
-.clipboardFunctions { border-top: 2px solid; border-top-color: "lighter (__FLAVOUR__ border)"; padding-top: 10px }
+.clipboardFunctions { border-top: 2px solid; border-color: "lighter (__FLAVOUR__ border)"; padding-top: 10px }
 .clipboardFunction { padding: 2px }
 .clipboardRemoveItem { float: right }
 
@@ -728,7 +729,7 @@ td.dr-tree-h-text, td.dr-tree-h-text span, td.dr-tree-h-text a.treeLink { white-
 .pollStatus .closed {	color: "default (__FLAVOUR__ color)"; }
 
 /*---- =Faceted Search ----*/
-.facetedSearchActionBar { border-bottom: 1px solid;  border-bottom-color: "light (__FLAVOUR__ border)"; padding: 2px; color: "default (__FLAVOUR__ color)"; }
+.facetedSearchActionBar { border-bottom: 1px solid;  border-color: "light (__FLAVOUR__ border)"; padding: 2px; color: "default (__FLAVOUR__ color)"; }
 .facetedSearchActionBar a { float: left; padding-top: 3px }
 
 .facetedSearchActionBar input.button {
@@ -740,7 +741,7 @@ td.dr-tree-h-text, td.dr-tree-h-text span, td.dr-tree-h-text a.treeLink { white-
 
 #facetedSearchSelectorDiv, #savedFacetedSearchSelectorDiv {
   border-bottom: 1px solid;
-  border-bottom-color: "lighter (__FLAVOUR__ border)";
+  border-color: "lighter (__FLAVOUR__ border)";
   margin: 0;
   padding: 0 0 5px }
 #facetedSearchSelectorDiv p, #savedFacetedSearchSelectorDiv p {
@@ -769,7 +770,7 @@ td.dr-tree-h-text, td.dr-tree-h-text span, td.dr-tree-h-text a.treeLink { white-
   padding: 3px }
 
 .facetedSearchBlock .widgetContent .labelOpenPopUp {
-  border-bottom: 1px solid;  border-bottom-color: "light (__FLAVOUR__ border)";
+  border-bottom: 1px solid;  border-color: "light (__FLAVOUR__ border)";
   color: "default (__FLAVOUR__ color)";
   display: block;
   margin: 0 0 5px;
@@ -787,7 +788,7 @@ td.dr-tree-h-text, td.dr-tree-h-text span, td.dr-tree-h-text a.treeLink { white-
 
 .facetedSearchPopUp .closePopUpHeader {
   background-color: "color.major.light (__FLAVOUR__ background)";
-  border-bottom: 1px dotted;  border-bottom-color: "light (__FLAVOUR__ border)";
+  border-bottom: 1px dotted;  border-color: "light (__FLAVOUR__ border)";
   padding: 3px;
   text-align: right }
 
