--- a/nuxeo-platform-document-routing-web/src/main/resources/web/nuxeo.war/layouts/layout_route_listing_template.xhtml
+++ b/nuxeo-platform-document-routing-web/src/main/resources/web/nuxeo.war/layouts/layout_route_listing_template.xhtml
@@ -133,8 +133,8 @@
 					<c:forEach var="folder"
 						items="#{value.data.getFirstChildFolders()}">
             <c:set var="tdParentStyleClass"
-              value="#{nxu:test((1+folder.depth)%4 ==0, 'routeRowBackground0', nxu:test((1+folder.depth)%4 == 1, 'routeRowBackground1', nxu:test((1+folder.depth)%4 ==2, 'routeRowBackground2', nxu:test((1+folder.depth)%4 ==3, 'routeRowBackground3', ''))))}" />
-						<td class="cellVerticalBorder  #{tdParentStyleClass}" rowspan="#{folder.getTotalChildCount()}">
+              value="#{nxu:test((folder.depth)%4 ==0, 'routeRowBackground0', nxu:test((folder.depth)%4 == 1, 'routeRowBackground1', nxu:test((folder.depth)%4 ==2, 'routeRowBackground2', nxu:test((folder.depth)%4 ==3, 'routeRowBackground3', ''))))}" />
+						<td class="cellVerticalBorder  #{tdParentStyleClass} " rowspan="#{folder.getTotalChildCount()}">
               <nxl:layoutColumnWidget>
   							<nxl:widget widget="#{widget}" value="#{folder}" />
   							<c:if
