NXP-7619: start to split css for a better modularity between pages

--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/print_generic.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/print_generic.css
@@ -1,4 +1,7 @@
-/*====== Default Print CSS - lkemen@nuxeo.com - Sept 2011 ======*/
+/*
+Basics styles for Print
+author: lkemen@nuxeo.com
+*/
 
 body { color: "black (__FLAVOR__ color)"; font-family: "default (__FLAVOR__ font)" }
 h1,h2,h3,h4,h5,h6 { margin: 0; padding: 0 }
