--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/tabs_content.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/tabs_content.css
@@ -43,6 +43,7 @@ h3.summaryTitle {
 
 .note_content_block { border: 1px solid; border-color: "neutral.light (__FLAVOR__ border)"; margin: 0 0 15px; padding: 15px }
 .note_content_block span, .note_content_block p { font-size: 1.05em; line-height: 1.8em }
+.note_content_block img { max-height: 150px; max-width: 200px }
 
 .lockFile_block, .restoreFile_block { padding: 0 0 10px }
 .lockDetail, .DetailList { padding-top: 5px }
