NXP-7619: Styles and palettes precision for more modularity with themes

--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/nuxeo_dm_specific.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/nuxeo_dm_specific.css
@@ -8,11 +8,10 @@ author: lkemen@nuxeo.com
 */
 
 /* =Frame */
+.documentManagement .nxMainContainer { height: 600px }
 .documentManagement .nxMainContainer .column { border-width: 1px; border-style: none solid none none; border-color: "neutral.lighter (__FLAVOR__ border)"; font-size: .85em; padding: 5px }
 
 /* =Document list */
-.currentDocumentDescription { font-size: .8em; padding: 4px 0 }
-.currentItemDescription { display: block; font-size: 13px }
 .serverChoice {
   float: left;
   margin-top: 20px;
