--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/basics.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/basics.css
@@ -36,6 +36,11 @@ h4, h5, h6 { color: "title.minor (__FLAVOR__ color)";font-size: .8em; margin: .2
 .floatL { float: left }
 .clear { clear:both }
 
+.left { float: left } /* used in relationship, to be replaced by floatL*/
+.right { float: right } /* used in relationship, to be replaced by floatR*/
+
 .fullWidth { width:100% }
+.half { width:45% } /* used in relationship, to be replaced by halfWidth*/
+.halfWidth { width:45% }
 
 .detail { font-size: .9em; opacity: .9;}
