--- a/nuxeo-platform-webapp-core/src/main/resources/themes/css/buttons_and_actions.css
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/css/buttons_and_actions.css
@@ -22,11 +22,12 @@ author: lkemen@nuxeo.com
 	text-decoration:none;
 	text-shadow:1px 1px 0px #fff }
 .button:hover, input.button:hover {
-  background: none "neutral.lighter (__FLAVOR__ background)";
+  background: none "color.minor.light (__FLAVOR__ background)";
 	border: 1px solid; border-color: "button.hover (__FLAVOR__ border)" }
 
-input.button[disabled=disabled], input.button[disabled=disabled]:hover {
-	background: none "neutral.lighter (__FLAVOR__ background)";
+input.button[disabled=disabled], input.button[disabled=disabled]:hover,
+input.button[disabled], input.button[disabled]:hover {
+	background: none "button.disabled (__FLAVOR__ background)";
 	border: 1px solid; border-color: "button.disabled (__FLAVOR__ border)";
 	color: "link.disabled (__FLAVOR__ color)";
 	cursor: default;
@@ -74,6 +75,22 @@ div.syndicationButton div.syndicationLinks a { color: #fff }
 .listingLayoutSelector { float: right; margin: 11px 0 10px 7px; text-align: right }
 .listingLayoutSelector .contentViewPageSelectorDesc { float: left; padding: 0 4px 0 0 }
 .listingLayoutSelector .langSelect { float: left; font-size: 0.8em; padding: 1px }
+
+/* =Actionbar in Home */
+.headerTitleAndTools { margin-bottom: 50px }
+.headerTitleAndTools h1 { display: inline }
+.headerTitleAndTools .globalActionBar { float: right }
+.globalActionBar h1 { float: left }
+.globalActionBar .actionList { float: right; list-style: none; margin: 0; padding: 0 }
+.globalActionBar .actionList li { background:"neutral.lighter (__FLAVOR__ background)"; border:1px solid;
+border-color: "neutral.light (__FLAVOR__ border)"; cursor:pointer; float:right; margin:0 0 0 8px; padding:3px 5px; position:relative; text-decoration:none; z-index:3000; border-radius:2px;}
+.globalActionBar .actionList li a { color: "default (__FLAVOR__ color)"; padding:0 }
+.globalActionBar .actionList li:hover { border-color: "neutral.dark (__FLAVOR__ border)" }
+.globalActionBar .actionList .actionSubList { background-color:#fff; border:1px solid; border-color: "neutral.light (__FLAVOR__ border)"; display:none; list-style:none; padding:0; position:absolute; right:0; top:20px; width:250px; z-index:1001; box-shadow:1px 1px 3px rgba(0, 0, 0, 0.2);}
+.globalActionBar .actionList .actionSubList li { background:none; border:none; display:inline; float:none; height:auto; margin:0; padding:0; text-align:left; width:300px;}
+.globalActionBar .actionList .actionSubList li a { background:none; border:none; display:block; margin:0; padding:5px 10px; text-decoration:none;}
+.globalActionBar .actionList .actionSubList li a:hover { background-color:"color.major.medium (__FLAVOR__ background)";}
+
 
 /* =RightClick menu */
 #contextMenu {
